--- a/index.html
+++ b/index.html
@@ -137,7 +137,12 @@
           </section>
 
     </main>
-    <footer>
+    <footer class="footer-container  ">
+        
+            <div>
+                <p>All rights reserved copyright@2025 startup landing page design. </p>
+            </div>
+        
 
     </footer>
 </body>
